--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,15 @@ services:
       - ./mlflow.db:/mlflow.db
     ports:
       - "5000:5000"
+    environment:
+      - GIT_PYTHON_REFRESH=quiet
 
   mlproject:
     build: .
     volumes:
       - .:/app
     environment:
-      MLFLOW_TRACKING_URI: http://mlflow:5000
+      - MLFLOW_TRACKING_URI=http://mlflow:5000
+      - GIT_PYTHON_REFRESH=quiet
     depends_on:
       - mlflow
