Expose port 5000 for MLflow tracking server

--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,3 @@
-# render.yaml
 services:
   - type: web
     name: mlflow-tracking-server
@@ -11,8 +10,10 @@ services:
     startCommand: docker-compose up
     envVars:
       - key: MLFLOW_TRACKING_URI
-        value: http://mlflow-tracking-server:5000
+        value: http://mlflow:5000
       - key: BACKEND_STORE_URI
         value: sqlite:///mlflow.db
       - key: DEFAULT_ARTIFACT_ROOT
         value: ./mlruns
+    ports:
+      - port: 5000
