docker compose fix test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3.8'
 services:
   mlflow:
     image: ghcr.io/mlflow/mlflow:latest
-    command: mlflow server --backend-store-uri file:///mlflow/backend --default-artifact-root /mlflow/artifacts --host 0.0.0.0 --port 5000
+    command: mlflow server --backend-store-uri file:///mlflow/backend --default-artifact-root /mlflow/artifacts --host localhost --port 5000
     volumes:
       - ./mlruns:/mlruns
       - ./mlflow.db:/mlflow.db
